examples/test/testpolicy16172.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16172
  namespace: namespace299
spec:
  podSelector:
    matchLabels:
      key5: value30
      key0: value17
      key39: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value34
          key17: value1
          key9: value42
      podSelector:
        matchLabels:
          key34: value40
          key0: value44
